<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/normal_100">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/github_users"
                    android:textColor="@color/white"
                    android:textSize="@dimen/body_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ToggleButton
                    android:id="@+id/mode_dark"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_dark"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/favorite_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/large_125"
                    android:clickable="true"
                    android:contentDescription="@string/favorite"
                    android:focusable="true"
                    android:src="@drawable/ic_favorite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_search_height"
            android:layout_marginHorizontal="@dimen/normal_100"
            android:layout_marginTop="@dimen/normal_150"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_title">

            <EditText
                android:id="@+id/edt_search_main"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_search_height"
                android:autofillHints="@string/search"
                android:background="@drawable/bg_edit_text_search"
                android:elevation="@dimen/small_50"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingStart="@dimen/normal_100"
                android:paddingEnd="@dimen/normal_100"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_no_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            android:fontFamily="sans-serif-medium"
            android:text="@string/users_not_find"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_search" />

        <ProgressBar
            android:id="@+id/pb_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/text_input_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_users"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/small_100"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/small_100"
            android:paddingVertical="@dimen/normal_100"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_search"
            tools:listitem="@layout/item_user" />

        <ImageView
            android:id="@+id/img_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_100"
            android:contentDescription="@string/no_users"
            android:src="@drawable/image_no_data"
            app:layout_constraintBottom_toTopOf="@id/tv_no_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_search"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/no_users"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_no_data" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>